--- a/SoftwareUpdate/GUPdotNET/Properties/Resources.resx
+++ b/SoftwareUpdate/GUPdotNET/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="GPL3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GPL3.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="gpl_3_0_standalone" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Docs\License\gpl-3.0-standalone.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
