--- a/Andriod/SpellingModual/src/SpellingStarter/res/values/strings.xml
+++ b/Andriod/SpellingModual/src/SpellingStarter/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Spelling Starter</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="genericLetterPlaceholder">D</string>
+    <string name="imagePlaceholder">Generic image used at startup as a placeholder</string>
 
 </resources>
