--- a/Andriod/SpellingModual/src/SpellingStarter/res/values/strings.xml
+++ b/Andriod/SpellingModual/src/SpellingStarter/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="genericLetterPlaceholder">D</string>
     <string name="imagePlaceholder">Generic image used at startup as a placeholder</string>
+    <string name="testTableLoad">Test Table Load</string>
 
 </resources>
